hphp/test/slow/reified_generics/param-verification-1.php.expectf
Catchable fatal error: Argument 1 passed to f() must be an instance of C<int, string, int>, given C<int,_,string> in %s on line 8
